<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">婚车多多</string>

    <string name="tab_login">登录</string>
    <string name="register_immediate">立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="hint_input_mobile">请输入手机号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="hint_input_register_password">请输入8-20位密码</string>
    <string name="hint_input_register_password_again">请再次输入密码</string>
    <string name="hint_input_new_password">请输入8-20位新密码</string>
    <string name="hint_input_new_password_again">请再次输入新密码</string>
    <string name="text_complete">完成</string>

    <string name="tab_title_order">订单</string>
    <string name="tab_title_my">我的</string>
    <string name="tab_running">进行中</string>
    <string name="tab_wait">待通过</string>
    <string name="tab_complete">已完成</string>
    <string name="tab_invalid">已失效</string>
    <string name="today_order">今日订单</string>

    <string name="text_order_num">%s单\n出车日历</string>
    <string name="text_evaluate">%s星\n客户评价</string>
    <string name="text_income">%s元\n累计收入</string>
    <string name="text_complete_order">%s单\n完成订单</string>
    <string name="text_mine_car_model">%s(%s)</string>
    <string name="text_order_number">已接单%s次</string>
    <string name="text_balance_detail_money">%s元</string>
    <string name="text_balance_detail_order">(订单号：%s)</string>
    <string name="empty_order_list">暂无当前状态订单</string>
    <string name="sign_up_car">查看报名车辆</string>

    <string name="city_name">上海市</string>
    <string name="robbing_my_type">我的车型</string>
    <string name="robbing_all_type">全部车型</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="text_order_id">订单号：%s</string>
    <string name="order_info_title">订单详情</string>

    <string name="permission_tip">正在请求权限</string>
    <string name="text_calendar_red">红色背景表示当天已有订单</string>
    <string name="text_calendar_orange">橙色背景表示当天无法接单</string>
    <string name="text_wedding_date">婚礼日期 \n%s</string>
    <string name="text_item_order_num">订单号：%s</string>
    <string name="text_order_money">¥ %s</string>
    <string name="text_car_model_money">参考价：%s元</string>
    <string name="text_car_model_count">当前日期空闲：%s辆</string>
    <string name="text_car_group_title">%1$s：%2$s元(5小时50公里参考价)</string>
    <string name="text_car_group_main">主婚车：%1$s (%2$s)辆</string>
    <string name="text_car_group_sub">副婚车：%1$s (%2$s)辆</string>
    <string name="text_estimate_km">预计里程：%s公里</string>
    <string name="text_allowed_money">可提现金额%s元</string>
    <string name="text_car_hours">%s小时</string>
    <string name="text_car_km">%s公里</string>
    <string name="text_hours">%s小时</string>
    <string name="text_km">%s公里</string>
    <string name="text_view_enroll_car_count">查看报名车辆(%s)</string>
    <string name="text_choosed_car_count">待支付  已选%s辆</string>
    <string name="text_sign_up_count">当前报名车辆：%s辆</string>
    <string name="text_current_price">当前平均价：%s元</string>
    <string name="text_btn_count_money">已选 %1$s 辆 合计：%2$s 元</string>
    <string name="text_over_money">当天超出费用: %1$s/小时 %2$s/公里</string>
</resources>
