<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="@dimen/dimen_15"
    android:paddingRight="@dimen/dimen_15"
    android:paddingTop="@dimen/dimen_8"
    android:paddingBottom="@dimen/dimen_8"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_car_group_title"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp_14"/>
    <!--<ImageView-->
        <!--android:id="@+id/iv_car"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"/>-->
    <LinearLayout
        android:layout_marginTop="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_car1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/text_main_gray"/>
        <ImageView
            android:id="@+id/iv_car2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dimen_5"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_car1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_car_group_main"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/text_main_gray"/>
        <TextView
            android:id="@+id/tv_car2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_car_group_sub"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/text_main_gray"/>
    </LinearLayout>
</LinearLayout>