<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:background="@color/bg_white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/dimen_75"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="当前手机号"
                android:textColor="@color/text_main_gray"
                android:textSize="@dimen/sp_14"/>
            <TextView
                android:id="@+id/tv_current_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_8"
                android:gravity="center_vertical"
                android:text="132****1885"
                android:textColor="@color/text_main_gray"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/dimen_75"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="新手机号"
                android:textColor="@color/text_main_gray"
                android:textSize="@dimen/sp_14"/>
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="@dimen/dimen_8"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/hint_input_mobile"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_main_gray"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_white"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="@dimen/dimen_75"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="验证码"
                android:textColor="@color/text_main_gray"
                android:textSize="@dimen/sp_14"/>
            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_marginLeft="@dimen/dimen_8"
                android:gravity="center_vertical"
                android:inputType="number"
                android:hint="@string/hint_input_verify_code"
                android:paddingRight="10dp"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_main_gray"
                android:textSize="@dimen/sp_14"/>

            <com.weddingcar.user.common.ui.VerifyCodeView
                android:id="@+id/vcv_code"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/selector_button_verify_code_gray"
                android:gravity="center"
                android:text="@string/get_verify_code"
                android:textColor="@color/text_white"
                android:textSize="@dimen/sp_13"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_25"
        android:background="@drawable/shape_button_red"
        android:gravity="center"
        android:text="完成"
        android:textColor="@color/text_white"
        android:textSize="@dimen/sp_17"/>

</LinearLayout>