<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dimen_10"
    android:paddingLeft="@dimen/dimen_15"
    android:paddingRight="@dimen/dimen_15"
    android:showDividers="middle"
    android:divider="@color/divide_main_gray"
    android:background="@color/bg_white">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_10"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/dimen_10"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_order_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_item_order_num"
            android:textColor="@color/text_main_gray"
            android:textSize="@dimen/sp_12"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="高先生"
            android:textColor="@color/text_main_gray"
            android:textSize="@dimen/sp_12"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/dimen_15"
        android:paddingBottom="@dimen/dimen_15"
        android:orientation="horizontal">
        <com.weddingcar.user.common.ui.CircleImageView
            android:id="@+id/iv_header"
            android:layout_width="@dimen/dimen_61"
            android:layout_height="@dimen/dimen_61"
            android:src="@drawable/my_head"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="2018年12月8日"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp_18"/>

                <TextView
                    android:id="@+id/tv_car_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_car_type"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_car_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="奥迪A6"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/text_main_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_time"
                    android:drawablePadding="@dimen/dimen_5"
                    android:text="@string/text_hours"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/text_black"/>
                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:drawableLeft="@drawable/icon_road"
                    android:drawablePadding="@dimen/dimen_5"
                    android:text="@string/text_km"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/text_black"/>

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_area"
                    android:drawablePadding="@dimen/dimen_5"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:text="松江区"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/text_black"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_car_count"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_10"
        android:paddingBottom="@dimen/dimen_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_enroll_car_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/text_view_enroll_car_count"
            android:textColor="@color/text_order_black"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>
    <!--<LinearLayout-->
        <!--android:id="@+id/ll_pay"-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingTop="@dimen/dimen_10"-->
        <!--android:paddingBottom="@dimen/dimen_10"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="支付剩余："-->
            <!--android:textColor="@color/text_black"-->
            <!--android:textSize="@dimen/sp_14"/>-->
        <!--<TextView-->
            <!--android:id="@+id/tv_pay_time"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="3分45秒"-->
            <!--android:textColor="@color/text_main_red"-->
            <!--android:textSize="@dimen/sp_14"/>-->
        <!--<TextView-->
            <!--android:id="@+id/tv_car_count"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/text_choosed_car_count"-->
            <!--android:textColor="@color/text_main_red"-->
            <!--android:textSize="@dimen/sp_14"/>-->
    <!--</LinearLayout>-->


</LinearLayout>